fix: z-index header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,6 +58,7 @@ a {
     position: sticky;
     top: -30px;
     background: #FFFCF4;
+    z-index: 1;
 }
 
 .header .main-content {
